--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ androidx-junit = "androidx.test.ext:junit:1.1.3"
 appcompat = "androidx.appcompat:appcompat:1.3.1"
 
 compose-activity = "androidx.activity:activity-compose:1.3.1"
+compose-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "compose" }
 compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-ui-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
@@ -36,5 +37,5 @@ mobius-rx2 = { module = "com.spotify.mobius:mobius-rx2", version.ref = "mobius" 
 mobius-test = { module = "com.spotify.mobius:mobius-test", version.ref = "mobius" }
 
 [bundles]
-compose = ["compose-activity", "compose-ui", "compose-ui-preview", "compose-material"]
+compose = ["compose-activity", "compose-ui", "compose-ui-preview", "compose-material", "compose-livedata"]
 mobius = ["mobius-android", "mobius-core", "mobius-extras", "mobius-rx2"]
